--- a/.github/workflows/backup_script_cicd.yaml
+++ b/.github/workflows/backup_script_cicd.yaml
@@ -1,1 +1,134 @@
+name: CI/CD Pipeline for MySQL Backup Script
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+env: 
+  DB_HOST: "127.0.0.1"
+  DB_USER: "root"
+  MYSQL_PWD: "password"
+  DB_NAME: "mydatabase"
+
+jobs:
+  test:
+    name: Run BATS Tests
+    runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: password
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+        ports:
+          - 3306:3306
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y bats mysql-client
+
+      - name: Create backups directory
+        run: mkdir -p backups
+
+      - name: Wait for MySQL to be ready
+        run: |
+          for i in {1..30}; do
+            if mysqladmin ping -h 127.0.0.1 --silent; then
+              echo "MySQL is ready!"
+              break
+            fi
+            echo "Waiting for MySQL..."
+            sleep 5
+          done
+
+      - name: Seed database
+        run: mysql -h 127.0.0.1 -u root -ppassword < seed.sql
+
+      - name: Run BATS tests
+        run: bats test.bats
+
+  build:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: test
+
+    outputs:
+      tag_version: ${{ steps.set_tags.outputs.tag_version }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up tags for Docker image
+        id: set_tags
+        run: |
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          echo "COMMIT_HASH=${COMMIT_HASH}" >> $GITHUB_ENV
+
+          TAG_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.1.0")
+          echo "TAG_VERSION=${TAG_VERSION}" >> $GITHUB_ENV
+          echo "::set-output name=tag_version::${TAG_VERSION}"
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mysql-backup:${{ env.TAG_VERSION }} -t ${{ secrets.DOCKER_USERNAME }}/mysql-backup:${{ env.COMMIT_HASH }} .
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/mysql-backup:${{ env.TAG_VERSION }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/mysql-backup:${{ env.COMMIT_HASH }}
+
+  deploy:
+    name: Deploy Application
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh          
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+      
+      - name: Install Ansible
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ansible
+      
+      - name: Run Ansible Playbook
+        run: |
+          cd ansible
+          mkdir -p roles  # Ensure the roles directory exists
+          ansible-galaxy install geerlingguy.docker -p ./roles
+          ansible-galaxy install geerlingguy.mysql -p ./roles
+          ansible-playbook -i hosts.ini playbook.yaml
+        env:
+          ANSIBLE_HOST_KEY_CHECKING: "False"
+          TAG_VERSION: ${{ needs.build.outputs.tag_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
